2010-01-03  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #13095: Massuploader: Max file size is shown in KB (THanks to Steffen Gebert)

2009-12-30  Xavier Perseguers  <typo3@perseguers.ch>

	* Raised DBAL version from 1.0.2 to 1.0.3

2009-12-28  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #12855: t3lib/class.t3lib_page.php generates invalid queries for DBAL
	* Fixed bug #13104: SQL parser cannot parse escaped single quote in INSERT statement

2009-12-26  Francois Suter  <francois@typo3.org>

	* Fixed bug #13100: Scheduler: Undefined enableBELog configuration option causes warnings

2009-12-26  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #12807: Bug: CSS issues with buttons (Recycler / File Mass Uploader) (Thanks to Andreas Kundoch and Helmut Hummel)

2009-12-26  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #13080: Uncheck function in tceforms unchecks too many items (Thanks to Georg Ringer)

2009-12-25  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #5260: Function linkWrapFile() in file class.file_list.inc uses wrong PATH prefix

2009-12-23  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #12987: List module: delete confirmation has extra ")" (Thanks to Steffen Gebert)
	* Fixed bug #13059: overriden user settings are not visible to the user (Thanks to Georg Ringer)

2009-12-21  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #12505: JSMENU's showActive is broken (Thanks to Joerg Wagner)

2009-12-19  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #13064: Deprecated function spliti for PHP5.3

2009-12-18  Tobias Liebig  <mail_typo3@etobi.de>

        * Fixed bug #12703: t3editor/codecompletion: parser error on opening brackets on the right side of an operator

2009-12-18  Francois Suter  <francois@typo3.org>

	* Fixed bug #12955: Missing -R option in chmod command in INSTALL.txt (thanks to Patrick Nussbaumer)

2009-12-13  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #13003: Move back methods belonging to t3lib_sqlparser
