@@ -1,6 +1,10 @@
+2010-01-04  Benjamin Mack  <benni@typo3.org>
+
+	* Fixed bug #12506: JSMENU does not respect mount point overlays (Thanks to Joerg Wagner)
+
 2010-01-03  Benjamin Mack  <benni@typo3.org>
 
-	* Fixed bug #13095: Massuploader: Max file size is shown in KB (THanks to Steffen Gebert)
+	* Fixed bug #13095: Massuploader: Max file size is shown in KB (Thanks to Steffen Gebert)
 
 2009-12-30  Xavier Perseguers  <typo3@perseguers.ch>
 
